--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,4 @@ server: true
 encoding: utf-8
 markdown: kramdown
 pygments: true
-highlighter: rouge
-theme: jekyll-theme-cayman
+highlighter: rougea
