--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ markdown: kramdown
 pygments: true
 highlighter: rougea
 theme: jekyll-theme-slate
+opf_meta: {"http-equiv":"content-language"}
+opf_meta: {"content":"ja"}
