--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,4 @@ markdown: kramdown
 pygments: true
 highlighter: rougea
 theme: jekyll-theme-slate
-opf_meta: {"http-equiv":"content-language"}
-opf_meta: {"content":"ja"}
+opf_meta: {"og:locale":"ja_JP"}
