--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ auto: true
 server: true
 encoding: utf-8
 markdown: kramdown
+language: ja
 pygments: true
 highlighter: rougea
 theme: jekyll-theme-slate
